Unescape email addresses when copied via the context menu.

A bug from 2008 caused the context menu to copy the fully URL-encoded
email address for compatibility with non-Unicode software. However, it
is now 2018 and we're copying to the clipboard as UTF16 anyway so it
makes much less sense to avoid decoding characters (especially since
URL-encoded Unicode characters are non-human-readable so it's hard to
figure out what the email address even is.

This also fixes the problem where a mailto: address gets URL-encoded and
there's a + sign in it, which becomes %2D, again obscuring the fact that
it's an address + tag (at least in Gmail).

Bug: 911139
Change-Id: Ibedc95f4784512282e89f7472c85f51cefae5b21
Reviewed-on: https://chromium-review.googlesource.com/c/1395152
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Dana Fried <dfried@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620430}
Former-commit-id: 7a142ee78e057f46ca64b0ad5c8a1a6aa750b91b